<?xml version="1.0"?>
<package format="3">
  <name>ai-cubpet</name>
  <version>0.1.0</version>
  <description>AI Cubpet native application that aggregates peripheral driver demos.</description>
  <maintainer email="dev@spacemit.com">Spacemit Robotics</maintainer>
  <license>Apache-2.0</license>

  <depend>components/peripherals/misc_io</depend>
  <depend>components/peripherals/pm</depend>
  <depend>components/peripherals/wifi</depend>
  <depend>components/peripherals/nfc</depend>
  <depend>components/peripherals/motor</depend>
  <depend>components/peripherals/light_sensor</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
